crates/marain-core/tests/fixtures/errors/07_no_block_after_if.lat
si ^x :
sit ^y est 1.
